add Gatherer demos